--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -7,8 +7,7 @@
     <title>Vite + React + TS</title>
   </head>
   <body>
-    <body>
-  <div id="root"></div>
-  <div id="modal-root"></div>
-</body>
+    <div id="root"></div>
+    <div id="modal-root"></div>
+  </body>
 </html>
